syntax = "proto3";

package types;

option go_package=".;types";

import "doc.proto";  //默认情况下，从相同目录下寻找该proto文件

message TermQuery {
    // 这3个成员变量只有1个不为nil
    Keyword Keyword = 1;    //Keyword类型引用自doc.proto
    repeated TermQuery Must = 2;
    repeated TermQuery Should = 3;
}

// protoc --go_out=./types --proto_path=./types term_query.proto 
// -I指定到module一级，即有go.mod文件的那一级目录。在windows上-I需使用绝对路径.